--- a/resources/styles.css
+++ b/resources/styles.css
@@ -14,3 +14,13 @@
   height: 2;
   fill: "purple";
 }
+
+.cycle-item text {
+  font-size: 32;
+  font-family: System-Regular;
+  font-weight: regular;
+  text-length: 32;
+  fill: white;
+  x: 100%-10;
+  text-anchor: end;
+}
